--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 #change userame and pass and Name BD 
-spring.datasource.url= jdbc:postgresql://localhost:5432/Garen
+spring.datasource.url= jdbc:postgresql://localhost:5432/
 spring.datasource.username= postgres
-spring.datasource.password= admin
+spring.datasource.password= 1903
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
